# gpuvis

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SConstruct  build_support.py  com.github.gpuvis.Gpuvis.desktop  com.github.gpuvis.Gpuvis.metainfo.xml  gpuvis.desktop  gpuvis.metainfo.xml  meson.build  meson_options.txt  readme_perf_events.txt  todo.txt  ucm.cmake
cmake/: FindSDL2.cmake  ucm.cmake
patches/: 0001-perf-data-Add-JSON-export.patch
qtcreator/: update_files.sh
sample/: Makefile  glxgears.c  gpuvis_trace_utils.h  trace-cmd-capture.sh  trace-cmd-command.sh  trace-cmd-setup.sh  trace-cmd-start-tracing.sh  trace-cmd-status.sh  trace-cmd-stop-tracing.sh
src/: Droid_Sans.cpp  MurmurHash3.cpp  MurmurHash3.h  RobotoCondensed_Regular.cpp  Roboto_Regular.cpp  etl_utils.cpp  etl_utils.h  fnv.h  gpuvis.cpp  gpuvis.h  gpuvis.scons  gpuvis_colors.cpp  gpuvis_colors.h  gpuvis_colors.inl  gpuvis_etl.cpp  gpuvis_etl.h  gpuvis_framemarkers.cpp  gpuvis_ftrace_print.cpp  gpuvis_graph.cpp  gpuvis_graphrows.cpp  gpuvis_i915_perfcounters.cpp  gpuvis_icon.c  gpuvis_macros.h  gpuvis_plots.cpp  gpuvis_utils.cpp  gpuvis_utils.h  gpuvis_wdat.cpp  gpuvis_wdat.h  hash_fnv.c  hook_gtk3.h  hook_gtk3_funcs.inl  noc_file_dialog.h  noc_file_dialog_osx.mm  stlini.cpp  stlini.h  tdopexpr.cpp  tdopexpr.h  ya_getopt.c
src/GL/: gl3w.c
src/SDL_ttf/: SDL_ttf.c  SDL_ttf.h  SDL_ttfx.c  SDL_ttfx.h
src/i915-perf/: i915-perf-read.cpp  i915-perf-read.h
src/imgui/: imconfig.h  imgui.cpp  imgui.cpp.orig  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_freetype.cpp  imgui_freetype.h  imgui_impl_opengl3.cpp  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  imgui_internal.h  imgui_sdlttf.cpp  imgui_sdlttf.h
src/libtraceevent/: README
src/libtraceevent/include/asm/: bug.h
src/libtraceevent/include/linux/: compiler.h
src/libtraceevent/src/: event-parse-api.c  event-parse-local.h  event-parse.c  event-parse.h  event-plugin.c  event-utils.h  kbuffer-parse.c  parse-utils.c  trace-seq.c  trace-seq.h
src/libtracefs/include/: tracefs-local.h  tracefs.h
src/libtracefs/src/: tracefs-instance.c  tracefs-utils.c
src/trace-cmd/: event-parse.c  event-parse.h  kbuffer-parse.c  list.h  trace-compress-zlib.c  trace-compress-zstd.c  trace-compress.c  trace-filter.c  trace-hooks.c  trace-input.c  trace-msg.c  trace-output.c  trace-read.cpp  trace-read.h  trace-seq.c  trace-util.c
src/trace-cmd/include/: list.h  trace-cmd-local.h  trace-cmd-private.h  trace-local.h  trace-msg.h  trace-write-local.h  tracefs.h
src/trace-cmd/include/trace-cmd/: trace-cmd.h
